fix: :bug: fixed scrollbar background not picking up right background color
Changed overflow behaviour of main container to "overlay" which is deprecated but supported by webkit browsers.

--- a/src/css/components/scrollbar.scss
+++ b/src/css/components/scrollbar.scss
@@ -5,6 +5,10 @@
     scrollbar-width: thin;
 }
 
+.overflow-overlay {
+    overflow: overlay;
+}
+
 ::-webkit-scrollbar {
     width: $scrollbarSize;
     height: $scrollbarSize;
